lib/SimpleDocParser/grammar.bnf
<HEADER_SYMBOL> ::= "@h1" | "@h2" | "@h3" | "@h4" | "@h5" | "@h6"
<PARAGRAPH_SYMBOL> ::= "@paragraph"
<LIST_SYMBOL> ::= "@list"
<EMPHASIS_SYMBOL> ::= "@italic" | "@bold" | "@bolditalic" | "@i" | "@b" | "@bi"
<CODE_SYMBOL> ::= "@code"
<IMAGE_SYMBOL> ::= "@img"
<CAPTION_SYMBOL> "@caption"
<LINK_SYMBOL> ::= "@link"
<INTERACTIVE_SYMBOL> ::= "@interactive"

<TEXT> ::= <LITERALS> | <LITERAL>

<EMPHASIS> ::= <EMPHASIS_SYMBOL> "[" <LITERAL> "]"


<LINK_CONTENT> ::= <EMPHASIS> | <TEXT>
<LINK> ::= <LINK_SYMBOL> "[" <LINK_CONTENT> "," <STRING_LITERAL> "]"

<CAPTION> ::= <CAPTION_SYMBOL> <TOP_CONTENT>
<IMAGE_CONTENT> ::= <LITERAL> "," <STRING_LITERAL> | <STRING_LITERAL>
<IMAGE> ::= <IMAGE_SYMBOL> "[" <IMAGE_CONTENT> "]"

<CODE_LANGUAGE> ::= "[" <STRING_LITERAL> "]" | E
<CODE> ::= <CODE_SYMBOL> <CODE_LANGUAGE> "<<" <LITERAL> ">>"


<LIST_ITEM> ::= <MID_ELEMENT> | <SUB_ELEMENT> | <TEXT> 
<`ORDERED_LIST> ::= <ORDERED_LIST> | E
<`UNORDERED_LIST> ::= <UNORDERED_LIST> | E
<`CHECK_LIST> ::= <CHECK_LIST> | E
<ORDERED_LIST> ::=  <NUMBER_LITERAL> "." <LIST_ITEM> <`ORDERED_LIST>
<UNORDERED_LIST> ::= "*" <LIST_ITEM> <`UNORDERED_LIST>
<CHECK_MARK> ::= "*" | E
<INTERACTIVE> ::= <INTERACTIVE_SYMBOL> | E
<CHECK_LIST> ::= "-" <INTERACTIVE> "[" <CHECK_MARK "]" <LIST_ITEM> <`CHECK_LIST>
<LIST_CONTENT> ::= <ORDERED_LIST> | <CHECK_LIST> | <UNORDERED_LIST>
<LIST> ::= <LIST_SYMBOL> <LIST_TYPE> <LIST_CONTENT>


<HEADER> ::= <HEADER_SYMBOL> <TOP_CONTENT>
<PARAGRAPH> ::= <HEADER_SYMBOL> <TOP_CONTENT>


<SUB_ELEMENT> ::= <EMPHASIS> | <LINK>
<MID_ELEMENT> ::= <LIST> | <CODE> | <IMAGE>
<TOP_ELEMENT> ::= <HEADER> | <PARAGRAPH>

<ELEMENT> ::= <TOP_ELEMENT> | <MID_ELEMENT> | <SUB_ELEMENT>
